[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Animated Objects/Knives/14.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Projetil_adaga.gd" type="Script" id=2]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/sharping-knives-.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 5 )

[node name="Projetil_adaga" type="Area2D" groups=["adaga", "inimigos", "projeteis"]]
scale = Vector2( 1.5, 1.5 )
collision_layer = 32
collision_mask = 96
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.76837e-07, -5.5 )
scale = Vector2( 0.6, 0.55 )

[node name="Som_faca" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
autoplay = true

[connection signal="area_entered" from="." to="." method="_on_Projetil_adaga_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Projetil_adaga_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
